--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "contao-community-alliance/event-dispatcher":"~1.0",
         "contao-community-alliance/composer-plugin": "~2.0",
         "contao-community-alliance/dc-general": "2.0.*@dev",
+        "bit3/contao-meta-palettes": "~1.5",
         "beberlei/assert": "~2.0"
     },
     "require-dev": {
