--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "contao-community-alliance/composer-plugin": "~2.0",
         "contao-community-alliance/dc-general": "2.0.*@dev",
         "bit3/contao-meta-palettes": "~1.5",
+        "menatwork/contao-multicolumnwizard": "~3.2",
         "beberlei/assert": "~2.0"
     },
     "require-dev": {
