--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "menatwork/contao-multicolumnwizard": "~3.2",
         "beberlei/assert": "~2.0",
         "netzmacht/workflow": "~1.0",
-        "mathiasverraes/classfunctions": "~1.1"
+        "mathiasverraes/classfunctions": "~1.1",
+        "symfony/expression-language": "~2.4"
     },
     "require-dev": {
         "phpspec/phpspec": "2.1.*@dev",
