--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     },
     "extra":{
         "branch-alias": {
-            "dev-master": "0.2.*@dev"
+            "dev-master": "1.0.x-dev"
         },
         "contao": {
             "sources":{
