--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,12 @@
         "phpspec/phpspec": "~2.1",
         "netzmacht/contao-build-tools": "~1.1"
     },
+    "repositories": [
+      {
+        "type": "composer",
+        "url": "https://legacy-packages-via.contao-community-alliance.org/"
+      }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
