--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require":{
         "php":">=5.4",
-        "contao/core":">=3.1,<3.4",
+        "contao/core":"~3.2",
         "contao-community-alliance/dependency-container":"~1.6",
         "contao-community-alliance/event-dispatcher":"~1.3",
         "contao-community-alliance/composer-plugin": "~2.0",
