--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name":"netzmacht/contao-workflow",
     "description":"Library for supporting customized Contao form rendering",
-    "keywords":["contao", "form", "helper"],
+    "keywords":["contao", "workflow", "data flow"],
     "type":"contao-module",
     "license":"LGPL-3.0+",
     "authors":[
