--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,26 @@
 language: php
+
 php:
-    - "5.4"
-    - "5.5"
-    - "5.6"
+  - "7.1"
+
+env:
+  - CONTAO_VERSION=contao/core-bundle ~4.4.0
+
+matrix:
+  exclude:
 
 sudo: false
 
 install:
-    - composer install --prefer-dist --dev
+  - travis_retry composer self-update && composer --version
+  - travis_retry composer require $CONTAO_VERSION --no-update
+  - travis_retry composer update --prefer-dist --no-interaction
 
-script:
-    - ant -keep-going
+script: ant -keep-going
+
+git:
+  depth: 2147483647
+
+cache:
+  directories:
+    - vendor
