--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 formatter.name: pretty
-extensions:
-#    - PhpSpec\Extension\CodeCoverageExtension
-code_coverage:
-    format: clover
+suites:
+  worfklow_suite:
+    namespace: Netzmacht\Contao\Workflow
+    psr4_prefix: Netzmacht\Contao\Workflow
