--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "friends-of-contao/contao-associategroups": "~1.3@dev"
     },
     "require-dev": {
-        "phpcq/all-tasks": "^1.2"
+        "phpcq/all-tasks": "^1.2",
+        "contao/manager-plugin": "^2.1"
     },
     "autoload": {
         "psr-4": { "Netzmacht\\Contao\\Workflow\\": "src/" }
