--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "menatwork/contao-multicolumnwizard": "^3.3.14",
         "beberlei/assert": "~2.0",
         "netzmacht/workflow": "~2.0@dev",
-        "netzmacht/contao-toolkit": "dev-master",
+        "netzmacht/contao-toolkit": "~3.0@dev",
         "mathiasverraes/classfunctions": "~1.1",
-        "symfony/expression-language": "~2.4",
+        "symfony/expression-language": "~3.3",
         "friends-of-contao/contao-associategroups": "~1.3@dev"
     },
     "require-dev": {
