--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "psr-4": { "Netzmacht\\Contao\\Workflow\\": "src/" }
     },
     "extra":{
+        "contao-manager-plugin": "Netzmacht\\Contao\\Workflow\\Bundle\\ContaoManager\\Plugin",
         "branch-alias": {
             "dev-master": "1.0.x-dev",
             "dev-develop": "2.0.x-dev"
