--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -1,5 +1,8 @@
 services:
-  netzmacht.contao_workflow.listners.create_user_roles_listener:
+  _defaults:
+    public: true
+
+  netzmacht.contao_workflow.listeners.create_user_roles_listener:
     class: Netzmacht\Contao\Workflow\Listener\CreateUserRolesListener
     arguments:
       - '@contao.framework'
@@ -9,3 +12,8 @@ services:
       - '@translator'
     tags:
       - { name: 'contao.hook', hook: 'initializeSystem' }
+
+  netzmacht.contao_workflow.listeners.dca.save_permission_callback:
+    class: Netzmacht\Contao\Workflow\Backend\Dca\SavePermissionsCallbackListener
+    arguments:
+      - '@netzmacht.contao_toolkit.repository_manager'
