--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "netzmacht/contao-toolkit": "~3.0@dev",
         "mathiasverraes/classfunctions": "~1.1",
         "symfony/expression-language": "~3.3",
-        "friends-of-contao/contao-associategroups": "~1.3@dev"
+        "friends-of-contao/contao-associategroups": "~1.3@dev",
+        "symfony/form": "^3.3",
+        "adamquaile/symfony-fieldset-bundle": "^1.1"
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.2",
