--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -47,3 +47,15 @@ services:
     arguments:
       - '@event_dispatcher'
       - '@netzmacht.contao_toolkit.repository_manager'
+
+  netzmacht.contao_workflow.listeners.dca.state:
+    class: Netzmacht\Contao\Workflow\Backend\Dca\StateCallbackListener
+    arguments:
+      - '@translator'
+      - '@templating'
+      - '@netzmacht.contao_toolkit.repository_manager'
+
+  netzmacht.contao_workflow.listeners.workflow_actions:
+    class: Netzmacht\Contao\Workflow\Backend\EventListener\WorkflowActionsListener
+    tags:
+      - { name: 'kernel.event_listener', event: 'netzmacht.contao_workflow.get_workflow_types', method: 'onGetWorkflowActions' }
