--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -11,3 +11,13 @@ services:
     class: Netzmacht\Contao\Workflow\Type\DefaultWorkflowType
     tags:
       - { name: 'netzmacht.contao_workflow.type' }
+
+  netzmacht.contao_workflow.action_factory:
+    class: Netzmacht\Contao\Workflow\Action\ActionFactory
+    arguments:
+      - []
+
+  netzmacht.contao_workflow.action_factory.property:
+    class: Netzmacht\Contao\Workflow\Action\Property\PropertyActionFactory
+    tags:
+      - { name: 'netzmacht.contao_workflow.action' }
