--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -23,7 +23,10 @@ services:
       - { name: 'netzmacht.contao_workflow.action' }
 
   netzmacht.contao_workflow.definition.workflow_loader:
-    class:
+    class: Netzmacht\Contao\Workflow\Definition\DatabaseDrivenWorkflowLoader
+    arguments:
+      - '@netzmacht.contao_toolkit.repository_manager'
+      - '@event_dispatcher'
 
   netzmacht.contao_workflow.entity_factory:
     class: Netzmacht\Contao\Workflow\Entity\DelegatingEntityFactory
@@ -75,3 +78,18 @@ services:
     class: Netzmacht\Contao\Workflow\Security\TransitionPermissionVoter
     tags:
       - { name: 'security.voter' }
+
+  netzmacht.contao_workflow.model.workflow_repository:
+    class: Netzmacht\Contao\Workflow\Model\Workflow\WorkflowRepository
+    tags:
+      - { name: 'netzmacht.contao_toolkit.repository', table: 'tl_workflow' }
+
+  netzmacht.contao_workflow.model.step_repository:
+    class: Netzmacht\Contao\Workflow\Model\Step\StepRepository
+    tags:
+      - { name: 'netzmacht.contao_toolkit.repository', table: 'tl_workflow_step' }
+
+  netzmacht.contao_workflow.model.transition_repository:
+    class: Netzmacht\Contao\Workflow\Model\Transition\TransitionRepository
+    tags:
+      - { name: 'netzmacht.contao_toolkit.repository', table: 'tl_workflow_transition' }
