Use the action factory in the action callback listener.

--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -34,8 +34,9 @@ services:
   netzmacht.contao_workflow.listeners.dca.action:
     class: Netzmacht\Contao\Workflow\Backend\Dca\ActionCallbackListener
     arguments:
-      - '@event_dispatcher'
       - '@netzmacht.contao_toolkit.repository_manager'
+      - '@netzmacht.contao_workflow.manager'
+      - '@netzmacht.contao_workflow.action_factory'
 
   netzmacht.contao_workflow.listeners.dca.state:
     class: Netzmacht\Contao\Workflow\Backend\Dca\StateCallbackListener
