--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -61,3 +61,15 @@ services:
       - '@netzmacht.contao_workflow.action_factory'
     tags:
       - { name: 'kernel.event_listener', event: 'netzmacht.contao_workflow.create_workflow', method: 'createWorkflow' }
+
+  netzmacht.contao_workflow.listeners.builder.transition_builder:
+    class: Netzmacht\Contao\Workflow\Definition\Database\TransitionBuilder
+    arguments:
+      - '@security.authorization_checker'
+    tags:
+      - {
+          name: 'kernel.event_listener',
+          event: 'netzmacht.contao_workflow.create_transition',
+          method: 'addTransitionConditions',
+          priority: 255
+        }
