--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -69,13 +69,24 @@ services:
       - { name: 'kernel.event_listener', event: 'netzmacht.contao_workflow.create_workflow', method: 'createWorkflow' }
 
   netzmacht.contao_workflow.listeners.builder.transition_builder:
-    class: Netzmacht\Contao\Workflow\Definition\Database\TransitionBuilder
+    class: Netzmacht\Contao\Workflow\Definition\Database\ConditionBuilder
     arguments:
+      - '@netzmacht.contao_workflow.expression_language'
       - '@security.authorization_checker'
     tags:
       - {
           name: 'kernel.event_listener',
           event: 'netzmacht.contao_workflow.create_transition',
-          method: 'addTransitionConditions',
+          method: 'createTransitionPermissionCondition',
           priority: 255
+        }
+      - {
+          name: 'kernel.event_listener',
+          event: 'netzmacht.contao_workflow.create_transition',
+          method: 'createExpressionConditions'
+        }
+      - {
+          name: 'kernel.event_listener',
+          event: 'netzmacht.contao_workflow.create_transition',
+          method: 'createPropertyConditions'
         }
