--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -116,3 +116,10 @@ services:
 
   netzmacht.contao_workflow.expression_language:
     class: Symfony\Component\ExpressionLanguage\ExpressionLanguage
+
+  netzmacht.contao_workflow.dca.transition_operation_builder:
+    class: Netzmacht\Contao\Workflow\Backend\Dca\TransitionOperationBuilder
+    arguments:
+      - '@netzmacht.contao_workflow.manager'
+      - '@netzmacht.contao_toolkit.repository_manager'
+      - '@netzmacht.contao_toolkit.dca.manager'
