--- a/src/Bundle/Resources/config/listeners.yml
+++ b/src/Bundle/Resources/config/listeners.yml
@@ -51,6 +51,14 @@ services:
     arguments:
       - '@netzmacht.contao_toolkit.repository_manager'
 
+  netzmacht.cotnao_workflow.listeners.hook.backend_user_navigation:
+    class: Netzmacht\Contao\Workflow\Backend\EventListener\UserNavigationListener
+    arguments:
+      - '@request_stack'
+      - '@router'
+    tags:
+      - { name: 'contao.hook', hook: 'getUserNavigation' }
+
   netzmacht.contao_workflow.listeners.builder.workflow_builder:
     class: Netzmacht\Contao\Workflow\Definition\Database\WorkflowBuilder
     arguments:
