Implement the transition form.

--- a/src/Bundle/Resources/config/controllers.yml
+++ b/src/Bundle/Resources/config/controllers.yml
@@ -16,3 +16,4 @@ services:
       - '@netzmacht.contao_workflow.type_registry'
       - '@templating'
       - '@router'
+      - '@netzmacht.contao_workflow.form.factory'
