Require the form bundle.

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "menatwork/contao-multicolumnwizard": "^3.3.14",
         "netzmacht/workflow": "~2.0@beta",
         "netzmacht/contao-toolkit": "dev-master",
+        "netzmacht/contao-form-bundle": "~1.0@dev",
         "symfony/expression-language": "~3.3",
         "symfony/form": "^3.3",
         "adamquaile/symfony-fieldset-bundle": "^1.1"
