Add form action.

--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -32,6 +32,11 @@ services:
       tags:
         - { name: 'netzmacht.contao_workflow.action' }
 
+  netzmacht.contao_workflow.action_factory.form:
+      class: Netzmacht\Contao\Workflow\Flow\Action\Form\FormActionFactory
+      tags:
+        - { name: 'netzmacht.contao_workflow.action' }
+
   netzmacht.contao_workflow.definition.workflow_loader:
     class: Netzmacht\Contao\Workflow\Definition\Loader\DatabaseDrivenWorkflowLoader
     arguments:
